# CER-Agent

./: .env.example  .gitignore  README.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  locustfile.py  manage.py  pyproject.toml
backend/apps/chatbot/: models.py  prompt_manager.py  serializers.py  urls.py  views.py
backend/apps/essay/: admin.py  apps.py  models.py  serializers.py  signals.py  snapshot_admin.py  snapshot_models.py  snapshot_service.py  urls.py  views.py
backend/apps/feedback/: models.py  serializers.py  urls.py  views.py
backend/apps/health/: urls.py  views.py
backend/apps/lab/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/map/: admin.py  apps.py  models.py  permissions.py  serializers.py  snapshot_admin.py  snapshot_models.py  snapshot_service.py  urls.py  views.py
backend/apps/mindMapTemplate/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/user/: admin.py  models.py  serializers.py  tests.py  views.py
backend/apps/user_action/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/batch_scoring/: README.md  _shared.py  batch_scoring_essay.py  batch_scoring_mindmap.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/seeder/: seed_prod.py  seed_test.py
backend/seeder/prod_data/: lab_data.py  mind_map_template_data.py  password_config.env.example  password_config.py  user_data.py
backend/seeder/test_data/: lab_data.py  user_data.py  (+3 more)
scripts/export_data/: .env.example  .gitignore  main.py  pyproject.toml  server.py  test.py
(+335 files in other folders)
